p2/apps/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${name}
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  #  defaultBackend:
  #    service:
  #      name: app-two
  #      port:
  #        number: 80
  rules:
  - host: ${hostname}
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: ${name}
            port:
              number: ${port}
              #  - host: app3.com
              #    http:
              #      paths:
              #      - pathType: Prefix
              #        path: /
              #        backend:
              #          service:
              #            name: app-two
              #            port:
              #              number: 80
              #
